blender crash when using real-time compositor w/ colorramp in cardinal or b-spline mode #105323

Closed
opened 2023-03-01 01:12:09 +01:00 by Luke Graybill · 5 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.56

Blender Version
Broken: version: 3.5.0 Beta, branch: blender-v3.5-release, commit date: 2023-02-27 23:28, hash: 0965341dcf53
Worked: (newest version of Blender that worked as expected)

Short description of error
The real-time compositor causes Blender to crash when it has a ColorRamp node in the nodegraph which has also been set to either the Cardinal or B-Spline mode. The other modes work as expected.

The following output is shown on the system console when the crash occurs:

Read prefs: C:\Users\Luke\AppData\Roaming\Blender Foundation\Blender\3.5\config\userpref.blend
Read blend: C:\Users\Luke\Desktop\crashtest.blend
Code marked as unreachable has been executed. Please report this as a bug.
Error found at C:/Users/blender/git/blender-v350/blender.git/source/blender/nodes/composite/nodes/node_composite_val_to_rgb.cc:96 in compile.
Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF7D2C5EFFA
Module  : blender.exe
Thread  : 00008538
Writing: C:\Users\Luke\AppData\Local\Temp\crashtest.crash.txt

[process exited with code 11 (0x0000000b)]

Exact steps for others to reproduce the error

  1. Create a new blendfile with New > General
  2. Switch to Compositing and add a ColorRamp to the nodegraph. Change it's mode to either Cardinal or B-Spline.
  3. Switch to a 3D Viewport and enable either Material Preview or Rendered view mode.
  4. Use the Viewport Shading popover to enable the real-time compositor.
  5. Observe crash!

Here's an attached blendfile illustrating the behavior; simply open it and change the ColorRamp mode to either Cardinal or B-Spline to trigger the crash.

Edit: I've also attached the crash report mentioned in the system console output above.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.56 **Blender Version** Broken: version: 3.5.0 Beta, branch: blender-v3.5-release, commit date: 2023-02-27 23:28, hash: `0965341dcf53` Worked: (newest version of Blender that worked as expected) **Short description of error** The real-time compositor causes Blender to crash when it has a ColorRamp node in the nodegraph which has also been set to either the Cardinal or B-Spline mode. The other modes work as expected. The following output is shown on the system console when the crash occurs: ``` Read prefs: C:\Users\Luke\AppData\Roaming\Blender Foundation\Blender\3.5\config\userpref.blend Read blend: C:\Users\Luke\Desktop\crashtest.blend Code marked as unreachable has been executed. Please report this as a bug. Error found at C:/Users/blender/git/blender-v350/blender.git/source/blender/nodes/composite/nodes/node_composite_val_to_rgb.cc:96 in compile. Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF7D2C5EFFA Module : blender.exe Thread : 00008538 Writing: C:\Users\Luke\AppData\Local\Temp\crashtest.crash.txt [process exited with code 11 (0x0000000b)] ``` **Exact steps for others to reproduce the error** 1. Create a new blendfile with `New > General` 2. Switch to Compositing and add a ColorRamp to the nodegraph. Change it's mode to either `Cardinal` or `B-Spline`. 3. Switch to a 3D Viewport and enable either Material Preview or Rendered view mode. 4. Use the Viewport Shading popover to enable the real-time compositor. 5. Observe crash! Here's an attached blendfile illustrating the behavior; simply open it and change the ColorRamp mode to either `Cardinal` or `B-Spline` to trigger the crash. Edit: I've also attached the crash report mentioned in the system console output above.
Luke Graybill added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-03-01 01:12:10 +01:00

Can confirm.

A debug build will abort just before the real crash and clearly indicates unimplemented values for both COLBAND_INTERP_B_SPLINE and COLBAND_INTERP_CARDINAL:

Code marked as unreachable has been executed. Please report this as a bug.
Error found at C:\Users\jesse\source\blender-git\blender\source\blender\nodes\composite\nodes\node_composite_val_to_rgb.cc:96 in compile.

CC @OmarEmaraDev

Can confirm. A debug build will abort just before the real crash and clearly indicates unimplemented values for both COLBAND_INTERP_B_SPLINE and COLBAND_INTERP_CARDINAL: ``` Code marked as unreachable has been executed. Please report this as a bug. Error found at C:\Users\jesse\source\blender-git\blender\source\blender\nodes\composite\nodes\node_composite_val_to_rgb.cc:96 in compile. ``` CC @OmarEmaraDev
Jesse Yurkovich added
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-03-01 02:18:36 +01:00
Jesse Yurkovich added the
Module
EEVEE & Viewport
label 2023-03-01 02:19:49 +01:00
Iliya Katushenock added the
Interest
Compositing
Interest
Nodes & Physics
labels 2023-03-01 05:28:13 +01:00

I bet it is just a wrong default case. The default shouldn't have been marked as BLI_assert_unreachable() as it should follow to the unoptimized version bellow.

I bet it is just a wrong default case. The default shouldn't have been marked as `BLI_assert_unreachable()` as it should follow to the unoptimized version bellow.

Then the node would simply not work. If this is not implemented, another interface enum seems to be used.

Then the node would simply not work. If this is not implemented, another interface enum seems to be used.

@mod_moder It is implemeneted. The default case should just break, not return.

@mod_moder It is implemeneted. The default case should just break, not return.
Jeroen Bakker added this to the 3.5 milestone 2023-03-14 15:45:28 +01:00
Jeroen Bakker added this to the EEVEE & Viewport project 2023-03-14 15:45:32 +01:00
Omar Emara was assigned by Jeroen Bakker 2023-03-14 15:45:41 +01:00
Clément Foucault self-assigned this 2023-03-15 17:05:59 +01:00

Fixed by fee6238d33

Fixed by fee6238d33748e55d4bfabc658478ec603886a18
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-03-15 17:35:51 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105323
No description provided.