Fix #105323: Compositor: Crash when using color-ramp with b-spline

... or carnidal interpolation with only 2 color stops.

This was triggering an incorrect path due to missing optimisation cases.
Just fall back to the unoptimized case fixes the assert.